# computer_graphics_tutorials

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Common.h  README.md
res/shaders/: basic3d_fs.glsl  basic3d_lighting_fs.glsl  basic3d_vs.glsl
tools/: install_deps_script.sh
tutorial1/: CMakeLists.txt  README.md  main.out  main_1.cpp  main_1.out
tutorial2/: CMakeLists.txt  LWindow.cpp  LWindow.h  README.md  main_2.cpp  main_2.out
tutorial3/: CMakeLists.txt  README.md  main_3.cpp  main_3.out
tutorial4/: CMakeLists.txt  LShaderManager.cpp  LShaderManager.h  main_4.cpp  main_4.out
tutorial5/: CMakeLists.txt  LMesh.cpp  LMesh.h  LMeshBuilder.cpp  LMeshBuilder.h  LShaderManager.cpp  LWindow.cpp  main_5.cpp
tutorial6/: CMakeLists.txt  LCommon.h  LEntity.h  LFixedCamera3d.cpp  LFixedCamera3d.h  LILight.cpp  LILight.h  LLightDirectional.cpp  LMaterial.cpp  LMesh.cpp  LMesh.h  LMeshBuilder.h  LScene.cpp  LScene.h  LSceneRenderer.cpp  LShaderManager.cpp  LTestScene.h  main_6.cpp
tutorial6/hw/: LTestScene.h
